[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onnxruntime = { git = "https://github.com/haixuanTao/onnxruntime-rs.git", branch = "owned_environment", optional = true }
eyre = "0.6.7"
image = "0.24"
futures = "0.3.21"
dora-tracing = { git = "https://github.com/dora-rs/dora" }
opentelemetry = { version = "0.17", features = ["rt-tokio", "metrics"] }
rayon = "1.5.3"
pollster = "0.2.5"
tract-onnx = "0.17"

[features]
gpu = ["onnxruntime"]
