[package]
name = "monoio_rayon_spawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monoio = { version = "0.0.6", features = [
  "async-cancel",
  "bytes",
  "iouring",
  "legacy",
  "macros",
  "utils",
  "debug",
] }
dora-node-api = { path = "../../dora/api/rust/node" }
eyre = "0.6.7"
image = "0.24"
futures = "0.3.21"
dora-tracing = { git = "https://github.com/dora-rs/dora" }
opentelemetry = { version = "0.17", features = ["rt-tokio", "metrics"] }
rayon = "1.5.3"
pollster = "0.2.5"
common = { path = "../common" }
env_logger = "0.9.0"
async-std = "1.11.0"
